# real2sim-eval

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
assets/robots/xarm/: xarm7.urdf  xarm7_with_gripper.urdf  xarm7_with_gripper_collision.urdf  xarm7_with_pusher.urdf
assets/scans/: color_alignment.py  construct_scene_gripper.py  construct_scene_pusher.py  visualize_scan.py
cfg/: eval_policy.yaml  keyboard_teleop.yaml  replay.yaml
cfg/env/: xarm_gripper.yaml  xarm_pusher.yaml
cfg/gs/: T.yaml  rope.yaml  sloth.yaml
cfg/physics/: default.yaml
cfg/policy/: default.yaml
cfg/renderer/: default.yaml
experiments/: eval_policy.py  eval_policy_parallel.py  keyboard_teleop.py  replay.py
experiments/scripts/eval_policy/: T_act.sh  T_dp.sh  T_pi0.sh  T_svla.sh  rope_act.sh  rope_dp.sh  rope_pi0.sh  rope_svla.sh  sloth_act.sh  sloth_dp.sh  sloth_pi0.sh  sloth_svla.sh
experiments/scripts/eval_policy_parallel/: rope_act.sh
experiments/scripts/keyboard_teleop/: rope.sh
experiments/scripts/replay/: rope.sh
experiments/utils/: T_final_state.pkl  calculate_success_T.py  calculate_success_rope.py  calculate_success_sloth.py  create_rigid_phystwin.py  dir_utils.py  visualize_rollouts.py
sim/envs/: env.py
sim/physics/: __init__.py  phystwin.py  spring_mass_warp.py
sim/renderer/: __init__.py  gs_renderer.py
sim/utils/env/: logging_utils.py  registration.py
sim/utils/gs/: colormap.py  gs_processor.py  icp_utils.py  sh_utils.py  transform_utils.py  viser_gui.py
sim/utils/robot/: kinematics_utils.py  robot_pc_sampler.py  (+1 more)
(+32 files in other folders)
